# Multiverse-Cards

./: .gitignore  CMakeLists.txt  FindSFML.cmake  README.md  build-both.sh  build-linux.sh  build-windows.sh  buildozer.spec  card.py  card_factory.py  game_manager.py  global_variables.py  main.py  makefile  requirements.txt  unit.py
.github/workflows/: build.yml  main.yml
MCards/: Cards.hpp
MCards/Cards/: Create.hpp
SFML/: Audio.hpp  Config.hpp  GpuPreference.hpp  Graphics.hpp  Main.hpp  Network.hpp  OpenGL.hpp  System.hpp  Window.hpp
SFML/Audio/: AlResource.hpp  Export.hpp  InputSoundFile.hpp  Listener.hpp  Music.hpp  OutputSoundFile.hpp  Sound.hpp  SoundBuffer.hpp  SoundBufferRecorder.hpp  SoundFileFactory.hpp  SoundFileReader.hpp  SoundFileWriter.hpp  SoundRecorder.hpp  SoundSource.hpp  SoundStream.hpp
SFML/Graphics/: BlendMode.hpp  CircleShape.hpp  Color.hpp  ConvexShape.hpp  Drawable.hpp  Export.hpp  Font.hpp  Glsl.hpp  Glyph.hpp  Image.hpp  Rect.hpp  RectangleShape.hpp  RenderStates.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Shape.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transform.hpp  Transformable.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  View.hpp
SFML/Network/: Export.hpp  Ftp.hpp  Http.hpp  IpAddress.hpp  Packet.hpp  Socket.hpp  SocketHandle.hpp  SocketSelector.hpp  TcpListener.hpp  TcpSocket.hpp  UdpSocket.hpp
SFML/System/: Clock.hpp  Err.hpp  Export.hpp  FileInputStream.hpp  InputStream.hpp  Lock.hpp  MemoryInputStream.hpp  (+12 more)
distr/: mcards
gradle/: build.gradle
source/: Main.cpp  main.cpp  main.py
(+146 files in other folders)
